# AV

./: .gitignore  README.md  build.gradle  settings.gradle
NativeOpenglDemo/: CMakeLists.txt  build.gradle
NativeOpenglDemo/src/main/: AndroidManifest.xml
NativeOpenglDemo/src/main/cpp/: native-lib.cpp
NativeOpenglDemo/src/main/cpp/egl/: WlEglHelper.cpp  WlEglHelper.h  WlEglThread.cpp  WlEglThread.h
NativeOpenglDemo/src/main/cpp/log/: WlAndroidLog.h
NativeOpenglDemo/src/main/cpp/matrix/: MatrixUtil.h
NativeOpenglDemo/src/main/cpp/opengl/: WlBaseOpengl.cpp  WlBaseOpengl.h  WlFilterOne.cpp  WlFilterOne.h  WlFilterTwo.cpp  WlFilterTwo.h  WlFilterYUV.cpp  WlFilterYUV.h  WlOpengl.cpp  WlOpengl.h
NativeOpenglDemo/src/main/cpp/shaderutil/: WlShaderUtil.h
NativeOpenglDemo/src/main/java/com/ywl5320/nativeopengldemo/: MainActivity.java  YUVplayer.java
NativeOpenglDemo/src/main/java/com/ywl5320/opengl/: NativeOpengl.java  WlSurfaceView.java
NativeOpenglDemo/src/main/res/layout/: activity_main.xml  activity_yuvplayer.xml
NativeOpenglDemo/src/main/res/values/: strings.xml
WlLivePusher/: CMakeLists.txt  build.gradle
WlLivePusher/src/main/: AndroidManifest.xml
WlLivePusher/src/main/cpp/: RtmpPush.cpp  RtmpPush.h  WlCallJava.cpp  WlCallJava.h  WlQueue.cpp  WlQueue.h  wlpush.cpp
WlLivePusher/src/main/java/com/ywl5320/wllivepusher/: CameraActivity.java  ImageVideoActivity.java  LivePushActivity.java  MainActivity.java  VideoActivity.java  YuvActivity.java
WlLivePusher/src/main/res/layout/: activity_camera.xml  activity_imagevideo.xml  activity_livepush.xml  activity_main.xml  activity_video.xml  activity_yuv.xml
WlLivePusher/src/main/res/values/: strings.xml
ZXKVideoPlayer/: CMakeLists.txt  build.gradle
ZXKVideoPlayer/src/main/cpp/: CMakeLists.txt
ZXKVideoPlayer/src/main/cpp/common/opengl_media/: movie_frame.h
ZXKVideoPlayer/src/main/cpp/common/opengl_media/texture/: texture_frame.cpp  texture_frame.h
ZXKVideoPlayer/src/main/cpp/video_player/: audio_output.cpp  video_output.cpp  video_player_controller.cpp  video_player_controller.h
ZXKVideoPlayer/src/main/cpp/video_player/common/: circle_texture_queue.h
ZXKVideoPlayer/src/main/cpp/video_player/decoder/: decoder_request_header.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  mediacodec_video_decoder.cpp  mediacodec_video_decoder.h  video_decoder.cpp  video_decoder.h
ZXKVideoPlayer/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
ZXKVideoPlayer/src/main/cpp/video_player/texture_uploader/: texture_frame_uploader.h  yuv_texture_frame_uploader.cpp  yuv_texture_frame_uploader.h
ZXKVideoPlayer/src/main/java/media/ushow/as_video_player/: MainActivity.java
ZXKVideoPlayer/src/main/jni/: ChangbaPlayer.cpp
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sloven/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: EGLCore.cpp  EGLCore.h  EGLSurfaceBase.cpp  EGLSurfaceBase.h  GLRenderer.h  GLrenderS.cpp  MessageQuene.cpp  MessageQueue.h
app/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp  mv_recording_preview_controller.h  recording_preview_renderer.h
app/src/main/cpp/libcommon/message_queue/: message_queue.h
app/src/main/cpp/libcommon/opensl_media/: opensl_es_context.h
app/src/main/java/com/sloven/: CameraUtils.java  MainActivity.java  PermissionHelper.java  ScaledDrawable2d.java  TextureFromCameraActivity.java
app/src/main/java/com/sloven/camera/: CameraPreviewActivity.java
app/src/main/java/com/sloven/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
app/src/main/java/com/sloven/songstudio/: PacketBufferTimeEnum.java  Songstudio.java  Videostudio.java
app/src/main/jni/: ChangbaRecordingPreviewScheduler.cpp  GLRenderer.cpp  com_changba_songstudio_Videostudio.h  com_sloven_camera_preview_ChangbaRecordingPreviewScheduler.h  log.h
app/src/main/jni/audio_effect/libaudio_effect/audio_effect/: audio_effect.h  audio_effect_adapter.h  audio_effect_builder.cpp  audio_effect_builder.h  audio_info.h
app/src/main/jni/camera_preview/: mv_recording_preview_controller.cpp  mv_recording_preview_controller.h  recording_preview_renderer.h
app/src/main/jni/libcommon/: CommonTools.h  matrix.h
app/src/main/jni/libcommon/egl_core/: egl_core.h
app/src/main/jni/libcommon/message_queue/: handler.h
app/src/main/jni/libcommon/opengl_media/: movie_frame.h
app/src/main/jni/libcommon/opengl_media/render/: video_gl_surface_render.cpp  (+1 more)
app/src/main/jni/libeditcore/common/: matrix.cpp  theme_parser.cpp  theme_parser.h
app/src/main/jni/libeditcore/decoder/: image.h
app/src/main/jni/libeditcore/editmodel/: model_filter.h
app/src/main/jni/libvideo_encoder/: video_encoder_adapter.h
app/src/main/jni/libvideo_encoder/hw_encoder/: hw_encoder_adapter.h
app/src/main/jni/libvideo_encoder/soft_encoder/: h264_util.h  host_gpu_copier.h  live_yuy2_packet_pool.h  video_x264_encoder.h
app/src/main/jni/video_consumer/libaudio_encoder/: audio_process_encoder_adapter.h
app/src/main/jni/video_consumer/libmusic_merger/: music_merger.h
app/src/main/jni/video_consumer/libvideo_consumer/: live_common_packet_pool.h  video_packet_consumer.h
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sloven/: ExampleUnitTest.java
splayer/src/main/cpp/: CMakeLists.txt  IPlayer.h  PlayStatus.h  SPlayer.cpp  SPlayer.h  player_jni.cpp
wangyiplayer/: CMakeLists.txt  build.gradle
wangyiplayer/src/main/: AndroidManifest.xml
wangyiplayer/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  WangYiFFmpeg.cpp  WangYiFFmpeg.h  native-lib.cpp
wangyiplayer/src/main/cpp/include/libswscale/: swscale.h
wangyiplayer/src/main/res/layout/: activity_main.xml
wangyiplayer/src/main/res/values/: strings.xml
(+403 files in other folders)
